# archicad-python

./: .editorconfig  .gitignore  Pipfile  README.md  pyproject.toml  ruff.toml
GS_Examples/Element ID conflict checker/: elementID_conflict_newline.py
code/: change_zone_builtins_from_userprops.py  change_zone_name.py  change_zone_names.py  create_layout.py  name_layout_by_content.py  print_built_ins.py
